3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Remove badly implemented quest support.
Removed files:
 common/quest.c
 doc/Developers/quests
 include/quest.h
 lib/help/quests
Modified files:
 common/Makefile.am
 include/define.h libproto.h Makefile.am sproto.h
 lib/Makefile.am
 plugins/cfpython/cfpython.c
 server/c_misc.c commands.c monster.c time.c
Nicolas Weeger 2007-06-09

doc/Developers/testplans: update.
Nicolas Weeger 2007-06-09

Remove party spell support. Not really tested, badly implemented.
 include/spells.h
 server/spell_util.c
Nicolas Weeger 2007-06-09

server/{attack.c, ob_types.c, apply.c, monster.c}, include/{sproto.h,
  typesproto.h}, types/{scroll/scroll.c, legacy/apply.c, potion/potion.c,
  Makefile.am: Refactor SCROLL and POTION applying.
server/ob_methods.c, include/sproto.h: Make METHOD_UNHANDLED cause fallback to
  other callbacks.
types/skillscroll/skillscroll.c, types/spellbook/spellbook.c: Use METHOD_OK
  instead of METHOD_ERROR when the applier is not a player.
Alex Schultz 2007-06-08

server/ob_types.c, server/apply.c, types/spellbook/spellbook.c,
  types/skillscroll/skillscroll.c. types/legacy/apply.c, types/Makefile.am,
  include/typesproto.h, include/sproto.h:
  Refactor apply for skillscrolls and spellbooks.
server/daemon.c: Remove extraenous parameter for become_daemon.
include/sproto.h: Update sproto.h
Alex Schultz 2007-06-07

Documentation, no functional change.
 server/shop.c
 types/trap/rune.c
Nicolas Weeger 2007-06-07

server/rune.c, include/typesproto.h, types/trap/{trap.c, rune.c, common_trap.c},
  types/rune/rune.c, types/legacy/process.c, types/Makefile.am: Refactor some
  rune and trap code.
Alex Schultz 2007-06-06
